--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-	"token": "ODExODY3NzQ3MDQ1NzM2NDc4.YC4cwg.uBG07LoNbhs3mYJXW7aasoUY7t8",
+	"token": "YOUR TOKEN",
 	"servers": [
-		"811501873810243650",
-		"572890397614014464"
+		"SERVER ID",
+		"SERVER ID"
 	],
 	"roleName": "RAINBOW",
 	"colors": 12,
